--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
   BuildBinary:
       runs-on: ubuntu-latest
       permissions:
-        contents: read
+        contents: write
         packages: write
       steps:
       - uses: actions/checkout@v2 
