--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "hypergate",
-  "version": "0.0.1",
+  "version": "0.0.0-snapshot",
   "description": "TCP and UDP gateway and reverse proxy built on top of hyperswarm",
-  "main": "hypergate-cli.js",
+  "main": "src/cli.ts",
   "dependencies": {
     "@hyperswarm/dht": "^6.4.0",
+    "@types/minimist": "^1.2.5",
     "express": "^4.18.2",
     "hyperswarm": "^4.3.6",
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.5",
+    "node-docker-api": "^1.1.22"
   },
   "bin": {
-    "hypergate": "./hypergate-cli.js"
+    "hypergate": "./build/dist/cli.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +27,16 @@
   "type": "module",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
+  },
+  "devDependencies": {
+    "@types/node": "^22.7.7",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
+  },
+  "scripts": {
+    "build": "tsc",
+    "start": "node ./build/dist/cli.js",
+    "debug": "tsx src/cli"
   }
 }
