--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./build/dist",
-    "baseUrl": "./"
+    "baseUrl": "./",
+     "types": ["node"] 
   },
   "include": ["src/**/*"]
 }
