--- a/package.json
+++ b/package.json
@@ -29,15 +29,23 @@
     "registry": "https://npm.pkg.github.com"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/node": "^22.8.6",
+    "@typescript-eslint/eslint-plugin": "^8.19.0",
+    "@typescript-eslint/parser": "^8.19.0",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.19.0"
   },
   "scripts": {
     "build": "tsc",
     "start": "node ./build/dist/cli.js",
-    "debug": "HYPERGATE_VERBOSE=true tsx src/cli"
+    "debug": "HYPERGATE_VERBOSE=true tsx src/cli",
+    "lint": "eslint 'src/**/*.{js,ts}'"
   }
 }
