--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
@@ -46,6 +46,7 @@
     "build": "tsc",
     "start": "node ./build/dist/cli.js",
     "debug": "HYPERGATE_VERBOSE=true tsx src/cli",
-    "lint": "eslint 'src/**/*.{js,ts}'"
+    "lint": "eslint 'src/**/*.{js,ts}'",
+    "format": "prettier --write 'src/**/*.{js,ts,tsx,jsx,json,css,scss,md}'"
   }
 }
