--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,8 @@
     "baseUrl": "./src",
      "types": ["node"] 
   },
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*",
+    "eslint.config.mjs"
+  ]
 }
