--- a/package.json
+++ b/package.json
@@ -43,13 +43,16 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.56.0"
+    "typescript-eslint": "^8.56.0",
+    "vitest": "^4.0.18"
   },
   "scripts": {
     "build": "tsc",
     "start": "node ./build/dist/cli.js",
     "debug": "HYPERGATE_VERBOSE=true tsx src/cli",
     "lint": "eslint 'src/**/*.{js,ts}'",
-    "format": "prettier --write 'src/**/*.{js,ts,tsx,jsx,json,css,scss,md}'"
+    "format": "prettier --write 'src/**/*.{js,ts,tsx,jsx,json,css,scss,md}'",
+    "test": "vitest run",
+    "test:watch": "vitest"
   }
 }
